# Tango

./: README.md  TangoROS_arduino.tar
TangoROS_v2/: TangoROS_v2.ino  imu_configuration.h
Ultrasonics/: URMV4HelpMate.rar  Ultrasonics.ino  Urm4parser.h
tango_bringup/: CMakeLists.txt  package.xml
tango_bringup/launch/: full_kinect.launch  full_rplidar.launch  mapping.launch  minimal.launch  serial.launch  tango_remote.launch
tango_control/: CMakeLists.txt  package.xml
tango_control/config/: tango_control.yaml
tango_control/launch/: diff_drive.launch  diff_drive_nav.launch  tango_control.launch  tango_pose_ekf.launch
tango_control/src/: encoders.cpp  infrareds.cpp  motors.cpp
tango_description/: CMakeLists.txt  package.xml
tango_description/launch/: display_xacro.launch  display_xacro_gazebo.launch  display_xacro_nav.launch
tango_description/meshes/collision_model/: slam_collision.dae  tango_collision.dae
tango_description/meshes/visual_model/: rplidar_a2.dae  tango_wheel.dae
tango_description/urdf/: bumper.urdf.xacro  caster.urdf.xacro  chassis_with_kinect.urdf.xacro  chassis_with_lidar.urdf.xacro  common_properties.urdf.xacro  fall_sensor.urdf.xacro  imu.urdf.xacro  infrared_sensor.urdf.xacro  kinect.urdf.xacro  rplidar_a2.urdf.xacro  sonar_sensor.urdf.xacro  tango.urdf.xacro  wheel.urdf.xacro
tango_msgs/: CMakeLists.txt  package.xml
tango_msgs/msg/: infrareds.msg  lights.msg  motor_commands.msg  relays.msg  ultrasonics.msg  wheel_encoders.msg
tango_navigation/: CMakeLists.txt  package.xml
tango_navigation/launch/: amcl.launch  tango_navigation.launch
tango_navigation/maps/: lab2-complete.pgm  lab2-complete.yaml  optics.pgm  optics.yaml
tango_navigation/param/: amcl.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
tango_rviz/: CMakeLists.txt  package.xml
tango_rviz/rviz/: tango.rviz
tango_simulation/: CMakeLists.txt  package.xml
tango_simulation/launch/: gazebo.launch  world.launch
tango_simulation/worlds/: maze.world  tango.world
tango_simulation/worlds/walls/: model.sdf
tango_slam/: CMakeLists.txt  package.xml
tango_slam/launch/: amcl.launch.xml  tango_slam.launch
tango_teleop/: CMakeLists.txt  package.xml
tango_teleop/launch/: tango_teleop_joy.launch  tango_teleop_key.launch
