<?xml version="1.0"?>
<package format="2">
  <name>tango_description</name>
  <version>1.0.0</version>
  <description>The tango_description package</description>
  <maintainer email="keiranburrows@hotamil.co.uk">Dr Keiran Burrows</maintainer>
  <author email="keiranburrows@hotmail.co.uk">Dr Keiran Burrows</author>
  <license>BSD</license>

  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>

  </export>
</package>
